Fix dark mode contrasts

--- a/site/style.css
+++ b/site/style.css
@@ -60,7 +60,7 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  background-color: var(--md-sys-color-surface-container-lowest);
+  background-color: var(--md-sys-color-surface-bright);
 }
 
 #tools_panel {
